@@ -1,0 +1,10 @@
+0	230	0	255	500	184	0	255
+500	184	0	255	1000	129	40	255
+1000	129	40	255	1500	89	79	255
+1500	89	79	255	2000	99	150	255
+2000	99	150	255	2500	128	196	255
+2500	128	196	255	3000	161	255	255
+3000	161	255	255	3500	255	255	255
+B	230	0	255
+F	255	255	255
+N	128	128	128
