@@ -1,0 +1,16 @@
+# colourmap for temperature slices
+#COLOR_MODEL = RGB
+#
+-40	0	0	255	-35	0	0	255
+-35	0	90	255	-30	0	90	255
+-30	0	120	255	-25	0	120	255
+-25	0	150	255	-20	0	150	255
+-20	0	180	255	-15	0	180	255
+-15	0	210	255	-10	0	210	255
+-10	0	240	255	-5	0	240	255
+-5	0	255	255	-1	0	255	255
+-1	255	180	0	0	255	180	0 
+0	255	0	0	1	255	0	0
+B	0	0	255
+F	255	255	255
+N	128	128	128
