@@ -1,0 +1,21 @@
+-15000	0	127	255	-200	0	127	255
+-200	20	170	255	-100	20	170	255
+-100	35	190	255	-75	35	190	255
+-75	20	215	255	-50	20	215	255
+-50	25	225	255	-25	25	225	255
+-25	35	240	255	0	35	240	255
+0	64	192	64	25	64	192	64
+25	64	192	32	50	64	192	32
+50	64	192	0	100	64	192	0
+100	48	188	0	150	48	188	0
+150	36	184	0	200	36	184	0
+200	24	180	0	250	24	180	0
+250	12	200	0	300	12	200	0
+300	6	220	0	400	6	220	0
+400	0	255	0	500	0	255	0
+500	240	250	140	1000	240	250	140
+1000	210	200	140	2000	210	200	140
+2000	165	92	42	4000	165	92	42
+B	255	255	255
+F	255	255	255
+N	255	255	255
